4.html 추가에 따른 html 정비 및 사진 이름 영어로 변경
'하루한마디'라는 다른 섹터를 추가
한글로 되어있던 것을 영어로 변경

--- a/3.html
+++ b/3.html
@@ -20,6 +20,6 @@
   <p>이것을 기점으로 그동안 애써 무시하고 있던 생활코딩을 틀었고 그것은 내게 있어서 딱딱한 수학적 논리와 사고를 요구하는 강압적인 모습이 아닌 논리들의 운문으로 짜여진 시집과 같이 느껴졌다. 그리고 그 사이에 있는 제작자들의 마음과 우리 주변에서 생기고 있는 작은 혁신들에 대해 다시 한번 생각하게 해주었다.</p>
   <p>내가 가지고 있는 스펙이라면 고졸 그리고 정보처리산업기사 정도다. 시험에 중요한 것들은 배웠지만 실제 웹에서 가장 많이 쓰이는 것에 대한 중요성을 모르고 있었던 나에게 변화를 가져다 줄 것이다.</p>
   <p>나름의 의지를 가지고 시작했지만 이 사이트는 사실 불편한 점이 한 두 가지가 아니다. 사진 크기도 제멋대로이고 예쁘장하게 오지도 않는다. 심지어 단락간의 간격도 그리 편해보이진 않는다. 정말 불편하다는 생각이 극에 달한 만한 정도가 아닐 수 있을까. 내 삶에 문제들을 푸는 과정에서 오히려 내가 그동안 목말라했던 것들을 풀어나갈 수 있는 기회가 되기를 소망해본다.</p>
-  <img src="상관관계.png" width="100%">
+  <img src="chaining.png" width="100%">
 </body>
 <html>
