--- a/2.html
+++ b/2.html
@@ -10,6 +10,7 @@
     <a href="1.html"><li>각오</li></a>
     <a href="2.html"><li>위시리스트</li></a>
     <a href="3.html"><li>회고</li></a>
+    <a href="4.html"><li>하루한마디</li></a>
   </ol>
 
   <h2>위시리스트</h2>
